--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-v0-project",
+  "name": "scheduler-2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -43,27 +44,27 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "latest",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
-    "fs": "latest",
+    "firebase": "^10.14.1",
+    "fs": "^0.0.1-security",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "oauth-1.0a": "^2.2.6",
-    "path": "latest",
-    "react": "^19",
+    "path": "^0.12.7",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "^2.12.7",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "latest",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
