fix(build): Fix implicit any types in blog page and upgrade TypeScript
- Add explicit types to 'category' and 'idx' parameters in blog post mapping
- Upgrade TypeScript to ^5.1.0 to satisfy Next.js requirements
- Add 'forceConsistentCasingInFileNames' to tsconfig.json
- Fix several 'any' types in admin dashboard for better type safety

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "target": "ES6",
     "baseUrl": ".",
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
