--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.6.1",
     "fs": "^0.0.1-security",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
